portfolio-app/src/components/Office.module.scss
$sea-green: #A2D5C6;
$sea-green-darker: #5e7a72;
$button-hover-green: #93c1b3;
$mint-green: #CFFFE2;
$zoomedIn : 5;


.room-container {
    overflow-x: scroll;
    overflow-y: hidden;
    border: 3px solid black;
    height: 700px;
    max-height: 700px;
    position: relative;
    width: 80%;
    margin: 0 auto 3em auto;
    .room {
        transform-style: preserve-3d;
        height: 700px;
        perspective: 1000px;
        position: relative;
        width: 100%;
        .side {
            height: 550px;
            display: block;
            position: absolute;
            z-index: -100;
        }
        .back {
            background-color: rgba($color: $sea-green, $alpha: 0.2);
            top: 0px;
            left: 50px;
            width: 1100px;
        }
        .left {
            width: 120px;
            background-color: rgba($color: $sea-green-darker, $alpha: 0.2);
            top: 0px;
            left: -170px;
            transform: rotateY(70deg) translateZ(150px);
        }
        .right {
            width: 120px;
            background-color: rgba($color: $sea-green-darker, $alpha: 0.2);
            top: 0px;
            left: 1255px;
            transform: rotateY(-70deg) translateZ(150px);
        }
    }
    @media only screen and (max-width: 850px) {
        width: 95%;
    }
}

.zoomIn {
    transform: translate3d(calc($zoomedIn * (50% - var(--left-offset) - 20px) + var(--scroll)), calc($zoomedIn * (0px - (var(--top-offset) - 50% + 30px))), 0) scale($zoomedIn);
    transition: transform 3s;
    background-color: var(--main-color);
}

.initial {
    transform: scale(1);
}

.magnifying-glass {
    position: absolute;
    display: block;
    background-color: transparent;
    border: none;
    transform: scale(1.3);
    &:hover {
        transform: scale(1.4);
    }
    
    .magnifying-glass-glasspart {
        width: 30px;
        height: 30px;
        border-radius: 20px;
        border: 5px orange solid;
        
    }
    .magnifying-glass-handle {
        width: 20px;
        height: 30px;
        border-top: 5px orange solid;
        rotate: 45deg;
        position: relative;
        top: -5px;
        left: 15px;

    }
}


// .plant {
//     position: absolute;
//     top: 270px;
//     left: 230px;
//     display: inline-block;
//     .plant-pot {
//         background-color: black;
//         width: 100px;
//         height: 100px;
//         border-bottom-left-radius: 50px;
//         border-bottom-right-radius: 50px;
//         box-shadow: 3px -3px 5px rgba($color: black, $alpha: 0.3), -0px 3px 5px rgba($color: black, $alpha: 0.5);
//     }
//     .plant-top {
//         filter: drop-shadow(15px -30px 30px rgba($color: black, $alpha: 0.3));
//         -webkit-filter: drop-shadow(15px -15px 30px rgba($color: black, $alpha: 0.3));
//     }
// }

img {
    display: block;
}
.table, .shelf, .notice-board, .computer, .computer-mouse, .plant-monstera, .can-1, .can-2, .can-3, .can-4, .can-5, .can-6, .can-7, .can-8, .bike, .lamp {
    position: absolute;
    filter: drop-shadow(3px -3px 5px rgba($color: black, $alpha: 0.3));
    -webkit-filter: drop-shadow(3px -3px 5px rgba($color: black, $alpha: 0.3));
}
.table {
    top: 370px;
    left: 400px;
}
.shelf {
    top: 120px;
    left: 850px;
    z-index: 5;
}
.notice-board {
    top: 90px;
    left: 390px;
    z-index: -3;
}
.computer {
    top: 300px;
    left: 460px;
}
.lamp {
    top: 250px;
    left: 340px;
    scale: 0.5;
}
.light-bulb {
    position: absolute;
    top: 301px;
    left: 375px;
    scale: 0.5;
    width: 30px;
    height: 30px;
    border-radius: 15px;
    z-index: -2;
}

.light-button {
    position: absolute;
    top: 365px;
    left: 420px;
    scale: 0.5;
    width: 20px;
    height: 15px;
    background-color: rgb(224, 118, 118);
    border-radius: 5px;
    z-index: 5;
    &:hover {
        background-color: rgb(255, 69, 69);
        animation: none;
    }
}
.computer-mouse {
    top: 365px;
    left: 630px;
    scale: 0.75;
}
.plant-monstera {
    top: 345px;
    left: 700px;
    scale: 0.75;
    z-index: 20;
}
.carpet {
    top: 580px;
    left: 300px;
    scale: 1.3;
    z-index: -3;
    position: absolute;
}
.calendar {
    position: absolute;
    top: -50px;
    left: 400px;
    scale: 0.2;
    filter: drop-shadow(1px -1px 2px rgba($color: black, $alpha: 0.3));
    -webkit-filter: drop-shadow(1px -1px 2px rgba($color: black, $alpha: 0.3));
}
.room-design {
    position: absolute;
    top: 150px;
    left: 450px;
    filter: drop-shadow(1px -1px 2px rgba($color: black, $alpha: 0.3));
    -webkit-filter: drop-shadow(1px -1px 2px rgba($color: black, $alpha: 0.3));
}
.thumbtack-1 {
    position: absolute;
    top: 150px;
    left: 520px;
}
.thumbtack-2 {
    position: absolute;
    top: 135px;
    left: 715px;
}
.window {
    position: absolute;
    top: -50px;
    left: 20px;
    scale: 0.6;
    z-index: -10;
    filter: drop-shadow(1px -1px 2px rgba($color: black, $alpha: 0.3));
    -webkit-filter: drop-shadow(1px -1px 2px rgba($color: black, $alpha: 0.3));
}
.bike {
    top: 250px;
    left: -250px;
    scale: 0.6;
}

.can-1 {
    top: 265px;
    left: 950px;
    z-index: 7;
}
.can-2 {
    top: 275px;
    left: 1050px;
    z-index: 7;
}
.can-3 {
    top: 360px;
    left: 890px;
    z-index: 7;
}
.can-4 {
    top: 355px;
    left: 1050px;
    z-index: 7;
}
.can-5 {
    top: 445px;
    left: 1010px;
    z-index: 7;
}
.can-6 {
    top: 445px;
    left: 940px;
    z-index: 7;
}
.can-7 {
    top: 440px;
    left: 900px;
    z-index: 7;
}
.can-8 {
    top: 170px;
    left: 910px;
    z-index: 7;
}

.project-card {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 80%;
}
button {
    background-color: transparent;
    border: none;
}

